--- a/styles.css
+++ b/styles.css
@@ -88,8 +88,8 @@ text-decoration:none;
 .columna1, 
 .columna2, 
 .columna-central,
-.columna3,columna4,
-.item1,item2,item3,item4,item5,item6,
+.columna3,.columna4,
+.item1,.item2,.item3,.item4,.item5,.item6,
 {
   width: 100%;
    
